--- a/src/components/button/button.css
+++ b/src/components/button/button.css
@@ -1,5 +1,7 @@
 .btn-entrar {
-    background-color: #8B3D07;
+    background-color: #8B1D07;
+    font-size: 16px;
+    font-weight: 500;
     color: white;
     border: none;
     padding: 12px 20px;
@@ -20,7 +22,7 @@
   }
   
   button[type="submit"] {
-    background-color: #8B3D07;
+    background-color: #8B1D07;
     color: white;
     margin-bottom: 20px;
   }
